[gd_scene load_steps=4 format=1]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/assets/background_1.png" type="Texture" id=2]
[ext_resource path="res://game/player/player.tscn" type="PackedScene" id=3]

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="jump_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.43
one_shot = true
autostart = false

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 512, 320 )
texture = ExtResource( 2 )

[node name="player_pos_1" type="Position2D" parent="."]

transform/pos = Vector2( 175, 225 )

[node name="player_pos_2" type="Position2D" parent="."]

transform/pos = Vector2( 175, 353 )

[node name="player_pos_3" type="Position2D" parent="."]

transform/pos = Vector2( 175, 464 )

[node name="player_pos_4" type="Position2D" parent="."]

transform/pos = Vector2( 175, 582 )

[node name="player" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 45.0301, 371.905 )

[node name="bottle_pos_1" type="Position2D" parent="."]

transform/pos = Vector2( 222, 200 )

[node name="bottle_pos_2" type="Position2D" parent="."]

transform/pos = Vector2( 222, 321.432 )

[node name="bottle_pos_3" type="Position2D" parent="."]

transform/pos = Vector2( 222, 437.095 )

[node name="bottle_pos_4" type="Position2D" parent="."]

transform/pos = Vector2( 222, 551.784 )

[node name="bottle_container" type="Node" parent="."]


